[metadata]
name = kobushi
version = attr: kobushi._version.__version__
description = Trackviewer for BVE trainsim 5/6
long_description = file: README.md, reference.md, LICENSE
keywords = BVE trainsim
license = Apache License 2.0

[options]
packages = kobushi
python_version >= "3.6"
install_requires =
    numpy
    scipy
    matplotlib
    ttkwidgets
    lark
include_package_data = True
