[metadata]
name = kobushi-trackviewer
version = attr: kobushi._version.__version__
description = Trackviewer for BVE trainsim 5/6
long_description = file: README.md
long_description_content_type = text/markdown
keywords = BVE trainsim
license = Apache License 2.0
author = Konawasabi
author_email = webmaster@konawasabi.riceball.jp
url=https://github.com/konawasabi/kobushi-trackviewer/

[options]
packages = kobushi
python_version >= "3.6"
install_requires =
    numpy
    scipy
    matplotlib
    ttkwidgets
    lark
include_package_data = True
